# activation-sparsity-benchmarking

./: .gitignore  README.md  SETUP.md  mypy.ini  requirements.txt
eval_scripts/llama3-1b/: baseline_benchmarking.sh  input_sparsity_benchmarking.sh  intermediate_sparsity_benchmarking.sh
lm_eval/: __main__.py  activations_monitor.py  evaluator.py  plotting_utils.py  sparisfication_manager.py  sparsification_manager.py  sparsification_manager_moe.py  sparsification_utils.py  sparsity_monitor.py
lm_eval/models/: huggingface.py
lm_eval/monitor_configs/: create_configs.py  gemma3-12b.json  gemma3-1b.json  gemma3-27b.json  gemma3-4b.json  llama3-3b.json  qwen2_5-0_5b.json
lm_eval/sparsification_configs/: create_configs.py  create_single_layer_configs.py  gemma2-2b_gate.json  gemma2-2b_input.json  gemma2-2b_intermediate.json  gemma2-2b_up_proj.json  gemma3-12b_all_inputs.json  gemma3-12b_gate.json  gemma3-12b_input.json  gemma3-12b_intermediate.json  gemma3-12b_up_proj.json  gemma3-1b_all_inputs.json  gemma3-1b_gate.json  gemma3-1b_input.json  gemma3-1b_intermediate.json  gemma3-1b_up_proj.json  gemma3-27b_all_inputs.json  gemma3-27b_gate.json  gemma3-27b_input.json  gemma3-27b_intermediate.json  gemma3-27b_up_proj.json  gemma3-4b_all_inputs.json  gemma3-4b_gate.json  gemma3-4b_input.json  gemma3-4b_intermediate.json  gemma3-4b_up_proj.json  llama3-1b_all_inputs.json  llama3-1b_gate.json  llama3-1b_input.json  llama3-1b_intermediate.json  llama3-3b_all_inputs.json  llama3-3b_up_proj.json  llama3-70b_all_inputs.json  llama3-8b_all_inputs.json  llama3-8b_gate.json  llama3-8b_input.json  llama3-8b_intermediate.json  olmoe-7b-a1b_all_inputs.json  olmoe-7b-a1b_gate.json  olmoe-7b-a1b_input.json  (+35 more)
plotting/: harness_parsing.py  sparse_inference.py  sparse_inference_evaluation.py
plotting/continued_finetuning/: continual_ft_plots_200m.py  gate_preacts_sparsity_enforcement_200m.py  gate_relufication_sparsity_enforcement_200m.py  gate_relufication_variants_200m.py  intermediate_sparsity_enforcement_200m.py  intermediate_sparsity_enforcement_with_kd_200m.py
plotting/sparsified_inference/: plot_sparsified_inference.py  plot_sparsified_inference_hoyer_gate.py  plot_sparsified_inference_hoyer_gate_preacts.py  plot_sparsified_inference_hoyer_gate_relufication.py  (+3 more)
sparsification_configs/: llama3-1b_gate.json  llama3-1b_intermediate.json  llama3-1b_up_proj.json  llama3-3b_gate.json  llama3-3b_input.json  llama3-8b_gate.json  llama3-8b_input.json  llama3-8b_up_proj.json
sparsified_harness/: .gitignore  pyproject.toml
sparsified_llada/: README.md  analyze_diff_steps.py  pyproject.toml
sparsified_llada/scripts/: llada_sampler.py  llada_top_p_at_diff_inp_int.py  llada_top_p_at_diff_int.py
sparsified_llada/slurm_scripts/model_grids/: llada_input_intermediate.sh  llada_intermediate.sh
sparsity_configs/: monitor_llama3-1b.json  sparsify_input_llama3-1b.json  sparsify_input_llama3-3b.json  sparsify_input_llama3-8b.json  sparsify_intermediate_llama3-1b.json  sparsify_intermediate_llama3-3b.json  sparsify_intermediate_llama3-8b.json
train/: args.py  dataprocess.py  hooks.py  main.py  relufication.py  sparsity_losses.py  sparsity_metrics.py  trainer.py  training_utils.py  wandb_utils.py
train_lora/: args.py
(+262 files in other folders)
